--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 }
 
 .phone-icon{
-    margin-right: 3px;
+    margin-right: 5px;
 }
   
   
@@ -137,8 +137,8 @@
 
 .overlay {
     background: rgba(255, 0, 0, 0.5);
-    padding: 20px;
-    text-align: center;
+    padding: 40px 20px;
+    text-align: start;
     color: white;
     max-width: 500px;
     border-radius: 10px;
